<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.thinkingfood.androidvovil.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/move_receta_deatail"
            app:destination="@id/view_receta_content"
            app:enterAnim="@anim/nav_default_pop_enter_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.thinkingfood.androidvovil.ui.fa"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/move_receta_deatail"
            app:destination="@id/view_receta_content"
            app:enterAnim="@anim/nav_default_pop_enter_anim" />
    </fragment>

    <fragment
        android:id="@+id/view_receta_content"
        android:name="com.thinkingfood.androidvovil.ui.home.subViews.RecetasContentFragment"
        android:label="@string/content_receta"
        tools:layout="@layout/fragment_recetas_content">
        <argument
            app:nullable="false"
            android:name="id"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/nav_shop_list"
        android:name="com.thinkingfood.androidvovil.ui.lista_compra.ListaCompraFragment"
        android:label="@string/menu_shop_list"
        tools:layout="@layout/fragment_lista_compras" />

    <fragment
        android:id="@+id/nav_resticciones"
        android:name="com.thinkingfood.androidvovil.ui.restriciones.RestricionesFragment"
        android:label="Restriciones"
        tools:layout="@layout/fragment_restricciones"/>
    <fragment
        android:id="@+id/nav_mis_recetas"
        android:name="com.thinkingfood.androidvovil.ui.mis_recetas.MisRecetasFragment"
        android:label="Mis Recetas"
        tools:layout="@layout/fragment_mis_recetas"/>
    <fragment
        android:id="@+id/nav_user"
        android:name="com.thinkingfood.androidvovil.ui.user.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/nav_recomend"
        android:name="com.thinkingfood.androidvovil.ui.recomendaciones.RecomendFragment"
        android:label="@string/menu_recomend"
        tools:layout="@layout/fragment_recomend"
        />
</navigation>